--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@types/d3-interpolate": "^1.3.1",
     "@types/d3-scale": "^3.3.0",
     "@types/d3-time": "^2.0.0",
-    "d3-interpolate": "^1.4.0",
-    "d3-scale": "^3.3.0",
+    "d3-interpolate": "https://github.com/drewsef-916/d3-interpolate.git",
+    "d3-scale": "https://github.com/drewsef-916/d3-scale.git",
     "d3-time": "^2.1.1"
   },
   "publishConfig": {
